# gemini-tts-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: generate_samples.py
src/gemini_tts_bot/: __init__.py  __main__.py  config.py  main.py
src/gemini_tts_bot/handlers/: __init__.py  commands.py  text.py
src/gemini_tts_bot/services/: __init__.py  analyzer.py  audio.py  tts.py
src/gemini_tts_bot/utils/: __init__.py  voices.py
